--- a/backend/package.json
+++ b/backend/package.json
@@ -19,6 +19,7 @@
     "express": "^5.2.1",
     "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.1",
+    "mongoose-paginate-v2": "^1.9.1",
     "morgan": "^1.10.1",
     "nodemon": "^3.1.11"
   }
